attached_assets/Pasted--rest-express-1-0-0-test-jest-FAIL-client-src-components-SOCSearch-tests-SOCSearch-test-t-1736969629766.txt

> rest-express@1.0.0 test
> jest

 FAIL  client/src/components/SOCSearch/__tests__/SOCSearch.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/workspace/client/src/components/SOCSearch/__tests__/SOCSearch.test.tsx:8
            (0, react_1.render)(<index_1.SOCSearch onSelect={(result) => { }} placeholder="Search for occupations"/>);
                                ^

    SyntaxError: Unexpected token '<'

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)

 FAIL  client/src/components/SOCSearch/test.tsx
  ● Test suite failed to run

    client/src/components/SOCSearch/test.tsx:4:43 - error TS2307: Cannot find module '../../../db/schema' or its corresponding type declarations.

    4 import type { JobTitleSearchResult } from '../../../db/schema';
                                                ~~~~~~~~~~~~~~~~~~~~

Test Suites: 2 failed, 2 total
Tests:       0 total
Snapshots:   0 total
Time:        19.832 s
Ran all test suites.








